--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stroy-leader-barcode-app",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "server.js",
   "type": "module",
   "scripts": {
@@ -11,7 +11,8 @@
     "better-sqlite3": "^9.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "express-session": "^1.17.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
